--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
+    "socket.io-client": "^4.7.4",
     "style-components": "^0.1.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
